TestCases/Errors/range_value/observations/sum_06_obs.spm
obs   10-19   0.004               
obs   11-19   0.00645161290322581 
error_value 10-19 0.0
error_value 11-19 0.0